# forgemark

./: .gitignore  .prettierignore  CHANGELOG.md  CONVENTIONS.md  README.md  RELEASING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  windows-release.yml
assets/: forgemark-skill.skill  sample-lost-anchor.md  sample-onboarding.md
assets/forgemark-skill/: AGENTS.md  README.md  SKILL.md
docs/: ARCHITECTURE.md  MULTI-DOCUMENT-PLAN.md  design-brief.md  design-tokens.js  design_feedback.md  design_feedback_v1_1.md  implementation-plan.md  markdown-commenter-proposal.md
docs/design_handoff_v1_1/: Forgemark - Design System.html  Forgemark - Rationale.html  Forgemark - Storyboard.html  Forgemark.html  README.md  app.jsx  chrome.jsx  comment-card.jsx  design-brief.md  design-system-canvas.jsx  design-system-extras.jsx  sample-doc.jsx  tokens.js
scripts/: build-skill.mjs  generate-fixtures.ts  release.mjs  set-version.mjs  verify-ai-output.mjs
src/: App.css  App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnchorMark.ts  AppShell.css  AppShell.tsx  Avatar.css  Avatar.tsx  CleanExportModal.tsx  CodeBlockAnchor.ts  ConflictModals.css  ContextMenu.css  ContextMenu.tsx  EditDuringOpenModal.tsx  EditorPane.css  EditorPane.tsx  ErrorBanner.css  ErrorBanner.tsx  FMCard.css  FMCard.tsx  FindReplaceBar.css  (+34 more)
tests/: setup.ts
(+106 files in other folders)
