[package]
name = "forgemark"
version = "0.1.0"
description = "Collaborative review of markdown documents by humans and AI agents."
authors = ["Forgemark contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "forgemark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
