[package]
name = "forgemark"
version = "1.3.0"
description = "Collaborative review of markdown documents by humans and AI agents."
authors = ["Forgemark contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "forgemark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# `watch` is feature-gated in tauri-plugin-fs v2; without it, the
# `watch` invoke command isn't registered and the renderer's
# `watch(...)` call rejects with "Command watch not found".
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
